@@ -839,7 +839,10 @@
 {Joe
 \i   Help Screen    \|turn off with ^KH    prev. screen ^[,                        \i
 \i \i Send bug reports to: http://sourceforge.net/projects/joe-editor \|\i \i
-\i \i Send bug reports to: http://sourceforge.net/projects/joe-editor             \|\i \i
+\i \i \|\i \i
+\i \i  default joerc file is here @JOERC@/joerc \|\i \i
+\i \i  default joerc file is here @prefix@/etc/joe/joerc \|\i \i
+\i \i  additional documentation can be found here @prefix@/etc/joe/doc \|\i \i
 
  FOURTH SECTION: Key bindings:
 
