@@ -1,3 +1,8 @@
+Fri Mar 11 2005  Joe Allen <jhallen@world.std.com>
+
+	Help text points to doc files
+
+
 Wed Mar  9 2005  Joe Allen <jhallen@world.std.com>
 
 	^K W now prints a success message.
